# graphlet-analysis

./: .gitignore  README.md  async_calc.py  async_guise_error_calculation.py  cc.py  connected_components.py  exact.py  exact_graphlet_count.py  gc.py  ggen.py  graph.py  graph_generator.py  graph_structure.py  guise_error_calculation.py  guise_error_on_input_graph.py  guise_top_k_calculation.py  guise_top_k_gdc_calculation.py  main.py  pyproject.toml  sample_20.in  sample_complex.in  sample_graph.in  ttt.py
algorithms/: epsilon_delta.py  exact.py  gfd.py  guise.py
c/: Makefile  README.txt  complex.cpp
complex/: guise_error_calculation.py  guise_error_calculation_on_input_complex.py  guise_error_calculation_on_random_complex.py  guise_error_on_input_graph.py  statistics.py  templates.py
complex/algorithms/: exact.py  (+2 more)
entities/: graph.py  graphlet.py  graphlet_statistics.py  graphlet_templates.py
exact/: exact_graphlet_count.py
graph/: graph.py  graphlet.py  statistics.py  templates.py
graph_algorithms/: connected_components.py  gfd_algorithm.py  graph_utils.py
guise/: guise.py
network-repository/: DD242.mtx  DD497.mtx  bio-DM-LC.mtx  bn-mouse-kasthuri_graph_v4.mtx  chesapeake.mtx  ia-enron-only.mtx  mammalia-voles-bhp-trapping.edges  mammalia-voles-bhp-trapping.mtx  mammalia-voles-kcs-trapping.mtx
samples/: complex.in  delaunay_1.in  delaunay_2.in  sample.in
test/: average_degree.py  exact.py  graph_generator.py  graph_type.py  graphlet_generator.py  graphlet_templates.py  guise.py  guise_error.py  input_graph.py
utils/: graph.py  timing.py  util.py
(+27 files in other folders)
